add downloading repos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GitHubDownloader"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GitHubDownloader">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <receiver
+            android:name=".core.repo.download.broadcastreceiver.DownloadStateChangesReceiver"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
+            </intent-filter>
+
+        </receiver>
+
     </application>
 
 </manifest>
